--- a/app/src/main/res/layout/fragment_stream_mode.xml
+++ b/app/src/main/res/layout/fragment_stream_mode.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.StreamModeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.camera.view.PreviewView
+        android:id="@+id/previewView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:backgroundTint="@color/white"
+        app:scaleType="fitCenter" />
 
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawOverlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </FrameLayout>
