--- a/app/src/main/res/layout/fragment_image_mode.xml
+++ b/app/src/main/res/layout/fragment_image_mode.xml
@@ -12,6 +12,7 @@
       android:orientation="vertical"
       >
       <com.google.android.material.chip.Chip
+          android:id="@+id/chip"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end"
@@ -21,6 +22,7 @@
           android:layout_marginEnd="16dp"
           />
       <androidx.appcompat.widget.AppCompatImageView
+          android:id="@+id/iv_selfi"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.6"
@@ -39,6 +41,7 @@
               style="@style/Widget.MaterialComponents.Button.OutlinedButton"
               android:textAllCaps="false"
               android:text="Segment Selfi"
+              android:id="@+id/btnSegment"
               />
 
 
